--- a/README
+++ b/README
@@ -32,5 +32,6 @@ Copyright Information
 =====================
 
 Written by Nick Welch in 2010.
+Forked by Tessil in 2016.
 No copyright.  This work is dedicated to the public domain.
 For full details, see http://creativecommons.org/publicdomain/zero/1.0/
