Add submodules for array-hash, emlib, flat_hash_map, hopscotch_map, ordered_map, robin_map, sparse_map and sparsepp_map libraries

--- a/README
+++ b/README
@@ -10,6 +10,7 @@ First, some prerequisites are:
 
 Now, run:
 
+$ git submodule update --init --recursive
 $ make
 $ python bench.py
 $ python make_chart_data.py < output | python make_html.py
