--- a/README
+++ b/README
@@ -38,5 +38,6 @@ Copyright Information
 
 Written by Nick Welch in 2010.
 Forked by Tessil in 2016.
+Forked by Aleksey Cheusov in 2020.
 No copyright.  This work is dedicated to the public domain.
 For full details, see http://creativecommons.org/publicdomain/zero/1.0/
