--- a/doc/TODO
+++ b/doc/TODO
@@ -1,15 +1,8 @@
 * google btree_map morzhovets@
 * instead of "error when unsupported"
   just ifdef! appropriate section in code
-* remove propername morzhovetz@
-* 2a997403a11105bc9148fc8343a9841c48bad729
-  except KeyboardInterrupt:
 * insert_random_shuffle_range_reserve
   9bd0d84473d4c8b4918cc6aade00176b69712360 by Nick Roseveare
-* 435365df7363f2ff4a5a61462a51af9ad892eb61
-  khash hpj@
-* e03bdb5b165c365463037ba458366ee8fd039049
-  python3 dict hpj@
 * ae52b0cc13054a76d0d12cb35e49fc5512cdf6df
   treadmil hpj@
 * RustHashMap bcec90c5d782333537bf150a87fe25d1180bb764
@@ -19,7 +12,6 @@
 * fnv1 hash function
 * plots like in klib
 * Targets for output and charts.html
-* List of programs in external file?
 * perl benchmark driedfruit@
    160f2ebf82eec2841ad9977b8e49f7d7fb9167ae
    7d631b4ba5001e91d6c1ebfd2c9f9e017e6de4a0
@@ -36,13 +28,11 @@
   92c27184210e820724de4e1afe4c3d979148307c
 * simple_sparsehash
   853d47a4f1567deefd4130392a8a99aa8b83a5d6
-* rockc
-  postgresql
+* postgresql
 * 2a1f3307325bcaf7077491994523953480ef6fcd greg7mdp
   another btree
 * 2a1f3307325bcaf7077491994523953480ef6fcd
   css
-* std::map?
 * 850f32e532d29bcd03873bbcef6443c422394317 mgd020
   home-made robin_hood
 * spacehash and custom
@@ -53,19 +43,6 @@
 * d3x0r -- generic_sparse?
 * rabbit_unordered_map, rabbit_sparse_unordered_map, sherwood_map -- 9abcfb6cd32329f139a22c6338bbe7a5d074b910
 * std_unordered_map_momo_pool, momo_unordered_map, DataTable -- morzhovetz@
-* Each executable should identify yourself:
-  Commit 0d92c294f35e50f58b9cef17100c79f291393a41
-         ff58f8ee9f0383cec421529042332544b23be231
 * Targets for output and charts.html
-* List of programs in external file?
-* perl benchmark driedfruit@
-   160f2ebf82eec2841ad9977b8e49f7d7fb9167ae
-   7d631b4ba5001e91d6c1ebfd2c9f9e017e6de4a0
-   4cec0b1dd5e59b33a35bf6272102651a40c0eb9a
-   89acfdd2790b1da9492807d27c3ea4b129b7b708
-* restore glib2 benchmark
-* lua hash map
-  0402e290ffce94c0e8c7472e386a6d1ce1220cb6
-* TCL hash map
 * https://github.com/SchrodingerZhu/in-memory-btree
 * https://code.google.com/archive/p/cpp-btree/wikis/UsageInstructions.wiki
