--- a/README.pod
+++ b/README.pod
@@ -1,25 +1,40 @@
-How to run these benchmarks:
+=pod
+
+=head1 How to run these benchmarks:
 
 First, some prerequisites are:
 
-* make
-* gcc and recent g++ (4.3-ish?)
-* boost
-* google sparsehash
-* qt
-* libjudy
-* libkyotocabinet
-* libleveldb
-* librocksdb
-* libpython3
+=over 4
+
+=item * make
+
+=item * gcc and recent g++ (4.3-ish?)
+
+=item * boost
+
+=item * google sparsehash
+
+=item * qt
+
+=item * libjudy
+
+=item * libkyotocabinet
+
+=item * libleveldb
+
+=item * librocksdb
+
+=item * libpython3
+
+=back
 
 Now, run:
 
-$ git submodule update --init --recursive
-$ emacs apps.txt # select assotiative arrays you are interested in
-$ make
-$ ./bench.py
-$ ./make_chart_data.py < output | ./make_html.py
+    $ git submodule update --init --recursive
+    $ emacs apps.txt # select assotiative arrays you are interested in
+    $ make
+    $ ./bench.py
+    $ ./make_chart_data.py < output | ./make_html.py
 
 Your charts are now in charts.html.
 
@@ -35,11 +50,12 @@ You might also want to disable any swap files/partitions so that swapping
 doesn't influence performance.  (The programs will just die if they try to
 allocate too much memory.)
 
-Copyright Information
-=====================
+=head1 Copyright Information
 
 Written by Nick Welch in 2010.
 Forked by Tessil in 2016.
 Forked by Aleksey Cheusov in 2020.
 No copyright.  This work is dedicated to the public domain.
 For full details, see http://creativecommons.org/publicdomain/zero/1.0/
+
+=cut
